# c-2.0Demo

./: .gitignore  CMakeLists.txt  README.md
tests/: CMakeLists.txt  test_VariadicTemplates.cpp  test_VariadicTemplates_case1.cpp  test_VariadicTemplates_case2.cpp  test_VariadicTemplates_case3.cpp  test_VariadicTemplates_case4.cpp  test_VariadicTemplates_case5.cpp  test_VariadicTemplates_case6.cpp  test_VariadicTemplates_case7.cpp  test_alias_template.cpp  test_auto.cpp  test_big_five.cpp  test_decltype.cpp  test_explicit.cpp  test_initializer_list.cpp  test_lambdas.cpp  test_nullptr.cpp
